# the-data-garden

./: .gitignore  README.md  pelicanconf.py  publish.cmd  pyproject.toml  refresh.cmd  requirements.txt
content/categories/Projects/: first-article.md
themes/genus/templates/fragments/: header.html
