[tool.poetry]
name = "the-data-garden"
version = "0.1.0"
description = ""
authors = ["David Asboth <hello@davidasboth.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.9.1"
markdown = "^3.6"
poetry-plugin-export = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
